--- a/blog/templates/alter_group.html
+++ b/blog/templates/alter_group.html
@@ -4,7 +4,7 @@
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{legend}}</legend>
+            <legend class="border-bottom mb-4">{{group.nome}} - {{legend}}</legend>
             <div class="form-group">
                 {{ form.nome.label(class="form-control-label") }}
                 {% if form.nome.errors %}
@@ -21,11 +21,11 @@
             <table class="table table-hover table-responsive">
       <thead>
         <tr>
-            <th scope="col">Spostamento</th>
+            <th scope="col">Spostamento/Ruolo</th>
             <th scope="col">Mod. Qualifica</th>
             <th scope="col">Licenza</th>
-            <th scope="col">Nome</th>
             <th scope="col">Cognome</th>
+            <th scope="col">Nome</th>
             <th scope="col">Qualifica</th>
             <th scope="col">AC</th>
         </tr>
@@ -36,8 +36,8 @@
             <th scope="row">{{marshal.changeg}}</th>
             <th scope="row">{{marshal.changeq}}</th>
             <th scope="row">{{marshal.mid}}{{marshal.licenza(readonly=True)}}</th>
-            <th scope="row">{{marshal.nome(readonly=True)}}</th>
             <th scope="row">{{marshal.cognome(readonly=True)}}</th>
+            <th scope="row">{{marshal.nome(readonly=True)}}</th>
             <th scope="row">{{marshal.qualifica(readonly=True)}}</th>
             <th scope="row">{{marshal.ac(readonly=True)}}</th>
         </tr>
@@ -54,13 +54,13 @@
 <div class="content-section">
     <ul class="nav flex-column nav-pills nav-fill">
   <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('groups.group', group_id=group_id) }}">Riepilogo Gruppo</a>
+    <a class="nav-link" href="{{ url_for('groups.group', group_id=group_id) }}">Riepilogo Attività</a>
   </li>
   <li class="nav-item">
     <a class="nav-link " href="{{ url_for('groups.update_group', group_id=group_id) }}">Aggiunta Personale</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" href="#">Spostamento Personale</a>
+    <a class="nav-link active" href="#">Gestione Personale</a>
   </li>
     </ul>
 </div>
@@ -139,5 +139,13 @@
             {{ filterform.submitf(class="btn btn-outline-info") }}
         </div>
     </form>
+</div>
+<div class="content-section">
+    <legend class="border-bottom mb-4">Informazioni Personale</legend>
+    <h3>Totale: {{group.cp+group.cpp+group.cpq}}</h3>
+    <h3>CP: {{group.cp}}</h3>
+    <h3>CPP: {{group.cpp}}</h3>
+    <h3>CPQ: {{group.cpq}}</h3>
+    <h3>Coordinatore: {{coordinatore.nome}} {{coordinatore.cognome}} - lic. {{coordinatore.licenza}}</h3>
 </div>
 {% endblock feed%}
