--- a/blog/templates/update_group.html
+++ b/blog/templates/update_group.html
@@ -4,7 +4,7 @@
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{legend}}</legend>
+            <legend class="border-bottom mb-4">{{group.nome}} - {{legend}}</legend>
             <div class="form-group">
                 {{ form.nome.label(class="form-control-label") }}
                 {% if form.nome.errors %}
@@ -24,8 +24,8 @@
             <th scope="col">Selezionato</th>
             <th scope="col">Gruppo</th>
           <th scope="col">Licenza</th>
-          <th scope="col">Nome</th>
           <th scope="col">Cognome</th>
+          <th scope="col">Nome</th>
             <th scope="col">Qualifica</th>
             <th scope="col">AC</th>
         </tr>
@@ -43,8 +43,8 @@
             </th>
             <th scope="row">{{marshal.gruppo(readonly=True)}}</th>
             <th scope="row">{{marshal.mid}}{{marshal.licenza(readonly=True)}}</th>
-            <th scope="row">{{marshal.nome(readonly=True)}}</th>
             <th scope="row">{{marshal.cognome(readonly=True)}}</th>
+            <th scope="row">{{marshal.nome(readonly=True)}}</th>
             <th scope="row">{{marshal.qualifica(readonly=True)}}</th>
             <th scope="row">{{marshal.ac(readonly=True)}}</th>
         </tr>
@@ -58,6 +58,7 @@
                 {% endif %}
             {% endfor %}
             </th>
+            <th scope="row">N.A.</th>
             <th scope="row">{{marshal.mid}}{{marshal.licenza(readonly=True)}}</th>
             <th scope="row">{{marshal.nome(readonly=True)}}</th>
             <th scope="row">{{marshal.cognome(readonly=True)}}</th>
@@ -84,13 +85,13 @@
 <div class="content-section">
     <ul class="nav flex-column nav-pills nav-fill">
   <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('groups.group', group_id=group_id) }}">Riepilogo Gruppo</a>
+    <a class="nav-link" href="{{ url_for('groups.group', group_id=group_id) }}">Riepilogo Attività</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" href="#">Aggiunta Personale</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="{{ url_for('groups.alter_group', group_id=group_id) }}">Spostamento Personale</a>
+    <a class="nav-link" href="{{ url_for('groups.alter_group', group_id=group_id) }}">Gestione Personale</a>
   </li>
     </ul>
 </div>
@@ -169,5 +170,12 @@
             {{ filterform.submitf(class="btn btn-outline-info") }}
         </div>
     </form>
+</div>
+<div class="content-section">
+    <legend class="border-bottom mb-4">Informazioni Personale</legend>
+    <h3>Totale: {{group.cp+group.cpp+group.cpq}}</h3>
+    <h3>CP: {{group.cp}}</h3>
+    <h3>CPP: {{group.cpp}}</h3>
+    <h3>CPQ: {{group.cpq}}</h3>
 </div>
 {% endblock feed%}
