routines to group ok

--- a/blog/templates/activity_overview.html
+++ b/blog/templates/activity_overview.html
@@ -10,6 +10,7 @@
             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="#">Modifica</a>
               <a class="btn btn-danger btn-sm m-1" href="{{ url_for('activities.delete_activity', activity_id=stage.id) }}">Elimina</a>
          </div>
+                                      <div class="card-header">{{stage.note}}</div>
          <table class="table table-hover table-responsive-lg" align="center">
       <thead>
         <tr>
@@ -50,6 +51,7 @@
             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="#">Modifica</a>
               <a class="btn btn-danger btn-sm m-1" href="{{ url_for('activities.delete_activity', activity_id=stage.id) }}">Elimina</a>
          </div>
+                                                    <div class="card-header">{{stage.note}}</div>
          <table class="table table-hover table-responsive-lg" >
       <thead>
         <tr>
@@ -90,6 +92,7 @@
             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="#">Modifica</a>
               <a class="btn btn-danger btn-sm m-1" href="{{ url_for('activities.delete_activity', activity_id=stage.id) }}">Elimina</a>
          </div>
+                                                    <div class="card-header">{{stage.note}}</div>
          <table class="table table-hover table-responsive-lg" align="center">
       <thead>
         <tr>
