--- a/blog/templates/activity_overview.html
+++ b/blog/templates/activity_overview.html
@@ -48,7 +48,7 @@
          <div class="article-metadata">
              <h3><a class="mr-2">{{ stage.luogo }} </a></h3>
              <h4><a>Inizio: {{stage.inizio.strftime(format='%Y-%m-%d %H:%M')}}  Fine: {{stage.fine.strftime(format='%Y-%m-%d %H:%M')}} </a></h4>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="#">Modifica</a>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('activities.update_stage', activity_id=stage.id) }}">Modifica</a>
               <a class="btn btn-danger btn-sm m-1" href="{{ url_for('activities.delete_activity', activity_id=stage.id) }}">Elimina</a>
          </div>
                                                     <div class="card-header">{{stage.note}}</div>
